--- a/assets/sass/2-atoms/_label.scss
+++ b/assets/sass/2-atoms/_label.scss
@@ -3,15 +3,34 @@
   font-size: $font-size-large;
   opacity: 1;
 
-  &.hide text {
+  &.hide .labelContainer {
     opacity: .2;
   }
-  rect {
-    opacity: .7;
+
+  .labelContainer {
+
+    display: table;
+    height: 200px;
+    width: 100%;
+    text-align: center;
+
+    > div {
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center;
+
+      > span {
+        background: rgba(255,255,255,.6);
+        padding: 0 5px;
+        @include hyphens(auto);
+        hyphenate-limit-chars: auto 5;
+        hyphenate-limit-lines: 2;
+        text-align: center;
+      }
+    }
   }
-  text-anchor: middle;
 }
 
-.hide-labels .label text {
+.hide-labels g.label .labelContainer {
   opacity: 0;
 }
